# devotion

./: CMakeLists.txt  README.md
include/: board.h  callback.h  config.h  devotion.h  olive.c  vc.c
include/gameplay/: board.h  game_event.h  god_intervention.h  god_intervention_impl.h  player.h  title.h
include/gameplay/elements/: amant.h  common.h  food.h  rain.h
include/gui/: callback.h  gui_amant.h  gui_board.h  gui_god_intervention.h  gui_title.h
includes/: olive.c
src/: devotion.c
src/gameplay/: board.c  game_event.c  god_intervention.c  god_intervention_impl.c  player.c  title.c
src/gameplay/elements/: amant.c  food.c  rain.c
src/gui/: callback.c  gui_amant.c  gui_board.c  gui_god_intervention.c  gui_title.c
test/: title_test.c
